# mixx_addon

./: .cache  .cache-11127699528  .gitignore  README.md  app.py  mixxxdb_subset.sqlite  pyproject.toml  requirements.txt
assets/: style.css
src/callbacks/: __init__.py  aggregate.py  callbacks.py  crates.py  individual.py  library.py  plotly_template.py  shared.py  songs.py  tabs_content.py  tabs_content_layouts.py
src/database/: __init__.py  database.py
src/db/: __init__.py  extra_features.sqlite  notes_db.py
src/layouts/: __init__.py  layout.py
test/: copy_db.py  mixxxdb_subset.sqlite  test.py  test_erase.py  test_read.py
