[tool.poetry]
name = "mixx-addon"
version = "0.1.0"
description = "Add on to analyze mixxx Dj app metadata"
authors = ["Alexis <alexis.gomel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
watchdog = "^6.0.0"
rich = "^13.9.4"
dash = "^2.18.2"
dash-bootstrap-components = "^1.7.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
